[metadata]
name = wxnotify
author = wxnotify
author-email = wxnotify
version = 0.0.2
summary = a simple wechat push
description-file = README.md
license = Apache-2
classifier = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
keywords = 
	setup
	distutils

[files]
packages = 
	wxnotify
data_files = 
	etc/ = etc/*

[entry_points]
console_scripts = 
	wxnotify-server = wxnotify.commands.server:run
pbr.config.drivers = 
  plain = pbr.cfg.driver:Plain
